fix light mode/dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: light dark;
+  color: #213547;
+  background-color: #e9e9e9;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -25,7 +25,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0; /* Keep margin: 0 */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -57,7 +57,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #e6e6e6;
   }
   a:hover {
     color: #747bff;
